--- a/README
+++ b/README
@@ -25,7 +25,10 @@ Earliest tested versions of major components:
   pygobject3 >= 3.4
   libosinfo >= 0.2.10
 
-A more detailed dependency list can be found in virt-manager.spec.in.
+A more detailed dependency list can be found in virt-manager.spec.in. On
+Debian based distributions you need to install the gobject-introspection
+bindings for some depedencies like libvirt-glib and libosinfo. Look for
+package names that start with 'gir'.
 
 
   Contact
