virt-install: Add --input option
For configuring VM <input> devices

--- a/man/virt-install.pod
+++ b/man/virt-install.pod
@@ -998,6 +998,14 @@ proper device (if needed).  This applies to all PCI devices.
 
 Use --controller=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsControllers>
 
+
+=item B<--input> OPTIONS
+
+Attach an input device to the guest. Example input device types are mouse, tablet, or keyboard.
+
+Use --input=? to see a list of all available sub options. Complete details at L<http://libvirt.org/formatdomain.html#elementsInput>
+
+
 =item B<--hostdev> OPTIONS
 
 =item B<--host-device> OPTIONS
