--- a/man/virt-xml.pod
+++ b/man/virt-xml.pod
@@ -192,6 +192,8 @@ Before defining or updating the domain, show the generated XML diff and interact
 
 =item B<--controller>
 
+=item B<--input>
+
 =item B<--serial>
 
 =item B<--parallel>
